@startuml

package Model {
        abstract  class Obstaculo {
                
                + {abstract} penalizar(Jugador): void
        }
}

package Model {
        class Pozos {
               + penalizar(Jugador): void
        }
}

package Model {
        class Piquete {
               + penalizar(Jugador): void
        }
}

package Model {
        class ControlPolicial {
             + penalizar(Jugador): void
        }
}

Obstaculo <|-- Pozos
Obstaculo <|-- Piquete
Obstaculo <|-- ControlPolicial

@enduml
